--- a/background_model/EvaluationDMDc.ipynb
+++ b/background_model/EvaluationDMDc.ipynb
@@ -18,30 +18,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "os              : Linux-5.10.221-llgrid-x86_64-with-glibc2.35\n",
-      "python          : 3.9.16\n",
-      "tsai            : 0.3.6\n",
-      "fastai          : 2.7.12\n",
-      "fastcore        : 1.5.29\n",
-      "sklearn         : 1.2.2\n",
-      "torch           : 2.0.1+cu117\n",
-      "device          : 2 gpus (['Tesla V100-PCIE-32GB', 'Tesla V100-PCIE-32GB'])\n",
-      "cpu cores       : 40\n",
-      "threads per cpu : 2\n",
-      "RAM             : 377.57 GB\n",
-      "GPU memory      : [32.0, 32.0] GB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-09-04 13:06:37.590010: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 AVX512F AVX512_VNNI FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-09-04 13:06:37.708891: I tensorflow/core/util/port.cc:104] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-09-04 13:06:38.388194: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2024-09-04 13:06:38.388253: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2024-09-04 13:06:38.388258: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "os              : Windows-10-10.0.19045-SP0\n",
+      "python          : 3.11.4\n",
+      "tsai            : 0.3.9\n",
+      "fastai          : 2.7.17\n",
+      "fastcore        : 1.7.20\n",
+      "sklearn         : 1.3.2\n",
+      "torch           : 2.2.2+cpu\n",
+      "device          : cpu\n",
+      "cpu cores       : 16\n",
+      "threads per cpu : 1\n",
+      "RAM             : 31.75 GB\n",
+      "GPU memory      : [23.99] GB\n"
      ]
     }
    ],
@@ -76,16 +64,7 @@
    "execution_count": 2,
    "id": "2c95c7b0-62de-48da-ac06-0a5b3299a24f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check for GPUs\n",
     "# Change the CUDA_VISIBLE_DEVICES values to numbers\n",
@@ -106,7 +85,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 3,
@@ -140,13 +119,6 @@
       "1. NRLMSISE\n",
       "2. TIEGCM\n"
      ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the number of your choice:  1\n"
-     ]
     }
    ],
    "source": [
@@ -157,7 +129,8 @@
     "print(\"Please select a data set:\")\n",
     "for i, option in enumerate(data_options, 1):\n",
     "    print(f\"{i}. {option}\")\n",
-    "data_choice = int(input(\"Enter the number of your choice: \"))\n",
+    "#data_choice = int(input(\"Enter the number of your choice: \"))\n",
+    "data_choice = 1\n",
     "data_name = data_options[data_choice - 1]\n",
     "\n",
     "# Use the data_name in your naming path\n",
@@ -181,11 +154,11 @@
    "source": [
     "# NRLMSISE\n",
     "if data_name == 'NRLMSISE':\n",
-    "    df_raw = loadmat('../Nikki_DESTO.jl/DESTO.jl/ROM/NRLMSISE_1997_2008_ROM_r100.mat')\n",
+    "    df_raw = loadmat('data/Atmospheric Density ROMs/NRLMSISE_1997_2008_ROM_r100.mat')\n",
     "\n",
     "# TIEGCM\n",
     "if data_name == 'TIEGCM':\n",
-    "    df_raw = scipy.io.loadmat('../Nikki_DESTO.jl/DESTO.jl/ROM/TIEGCM_1997_2008_ROM_r100.mat')"
+    "    df_raw = scipy.io.loadmat('data/Atmospheric Density ROMs/ROM/TIEGCM_1997_2008_ROM_r100.mat')"
    ]
   },
   {
@@ -292,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "4f8e769f-b065-4502-a5f1-382b2eb22e1a",
    "metadata": {},
    "outputs": [
@@ -304,13 +277,6 @@
       "1. low space weather\n",
       "2. medium space weather\n",
       "3. high space weather\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the number of your choice:  3\n"
      ]
     }
    ],
@@ -328,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "b7ac7d00-fbb1-4722-a394-209d92cd6b96",
    "metadata": {},
    "outputs": [
@@ -336,7 +302,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.0s\n"
+      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.1s\n"
      ]
     }
    ],
@@ -374,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "f3b23bf6-4764-4c8b-b791-27e24c25853f",
    "metadata": {},
    "outputs": [],
@@ -387,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "eb339f4e-7425-4fa0-b2b7-a10e4d363d8a",
    "metadata": {},
    "outputs": [],
@@ -419,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "617b454e-3271-4ea0-86aa-189fd62d81c3",
    "metadata": {},
    "outputs": [],
@@ -456,7 +422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -470,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
