add gpt model guess, updated notebooks, and txtbook reference

--- a/background_model/DataGenerationandStandardization.ipynb
+++ b/background_model/DataGenerationandStandardization.ipynb
@@ -19,13 +19,13 @@
      "output_type": "stream",
      "text": [
       "os              : Windows-10-10.0.19045-SP0\n",
-      "python          : 3.11.4\n",
+      "python          : 3.12.7\n",
       "tsai            : 0.3.9\n",
-      "fastai          : 2.7.17\n",
-      "fastcore        : 1.7.22\n",
+      "fastai          : 2.7.18\n",
+      "fastcore        : 1.7.26\n",
       "sklearn         : 1.3.2\n",
-      "torch           : 2.2.2+cu118\n",
-      "device          : 1 gpu (['NVIDIA GeForce RTX 3090 Ti'])\n",
+      "torch           : 2.2.2+cpu\n",
+      "device          : cpu\n",
       "cpu cores       : 16\n",
       "threads per cpu : 1\n",
       "RAM             : 31.75 GB\n",
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 3,
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "be29bf2b",
    "metadata": {
     "scrolled": true
@@ -1452,7 +1452,7 @@
      "text": [
       "Initial memory usage: 22.32 MB  \n",
       "Final memory usage  : 11.38 MB   (-49.0%)\n",
-      "[Pipeline] .......... (step 1 of 4) Processing shrinker, total=   0.0s\n",
+      "[Pipeline] .......... (step 1 of 4) Processing shrinker, total=   0.1s\n",
       "[Pipeline] ... (step 2 of 4) Processing drop_duplicates, total=   0.0s\n",
       "[Pipeline] ........... (step 3 of 4) Processing add_mts, total=   0.0s\n",
       "[Pipeline] ...... (step 4 of 4) Processing fill_missing, total=   0.1s\n",
@@ -3313,7 +3313,7 @@
      "text": [
       "training\\exp_pipe\\exp_pipe_mediumSW_data directory already exists.\n",
       "Pipeline saved as training\\exp_pipe\\exp_pipe_mediumSW_data\\NRLMSISE.pkl\n",
-      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.0s\n"
+      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.1s\n"
      ]
     },
     {
@@ -4164,7 +4164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.1s\n",
+      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.2s\n",
       "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.1s\n",
       "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.0s\n"
      ]
@@ -4256,7 +4256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
