--- a/background_model/EvaluationDMDc.ipynb
+++ b/background_model/EvaluationDMDc.ipynb
@@ -19,13 +19,13 @@
      "output_type": "stream",
      "text": [
       "os              : Windows-10-10.0.19045-SP0\n",
-      "python          : 3.11.4\n",
+      "python          : 3.8.20\n",
       "tsai            : 0.3.9\n",
-      "fastai          : 2.7.17\n",
-      "fastcore        : 1.7.20\n",
-      "sklearn         : 1.3.2\n",
-      "torch           : 2.2.2+cpu\n",
-      "device          : cpu\n",
+      "fastai          : 2.7.18\n",
+      "fastcore        : 1.7.19\n",
+      "sklearn         : 1.2.2\n",
+      "torch           : 2.2.2\n",
+      "device          : 1 gpu (['NVIDIA GeForce RTX 3090 Ti'])\n",
       "cpu cores       : 16\n",
       "threads per cpu : 1\n",
       "RAM             : 31.75 GB\n",
@@ -70,10 +70,11 @@
     "# Change the CUDA_VISIBLE_DEVICES values to numbers\n",
     "# See (https://forums.fast.ai/t/exception-occured-in-lrfinder-when-calling-event-after-fit/104389/8)\n",
     "if torch.cuda.is_available():\n",
-    "    result = subprocess.check_output(\"nvidia-smi -L | grep -oE '[0-9]+:' | tr -d ':'\", shell=True).decode(\"utf-8\").strip()\n",
-    "    os.environ['CUDA_VISIBLE_DEVICES'] = result\n",
+    "    #result = subprocess.check_output(\"nvidia-smi -L | grep -oE '[0-9]+:' | tr -d ':'\", shell=True).decode(\"utf-8\").strip()\n",
+    "    #os.environ['CUDA_VISIBLE_DEVICES'] = result\n",
     "\n",
-    "    print(os.environ['CUDA_VISIBLE_DEVICES'])"
+    "    #print(os.environ['CUDA_VISIBLE_DEVICES'])\n",
+    "    pass"
    ]
   },
   {
@@ -85,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 3,
@@ -217,9 +218,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.1s\n",
-      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.1s\n",
-      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.0s\n"
+      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.4s\n",
+      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.2s\n",
+      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.1s\n"
      ]
     }
    ],
@@ -302,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.1s\n"
+      "[Pipeline] ............ (step 1 of 1) Processing scaler, total=   0.4s\n"
      ]
     }
    ],
@@ -422,7 +423,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "stormai",
    "language": "python",
    "name": "python3"
   },
@@ -436,7 +437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.20"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
